# delivery-prediction

./: README.md  pyproject.toml
interactive/: 00_data_loading.ipynb  00_eda.ipynb  01_EDA.ipynb  03_business_analytics.ipynb  extra_structs.py  helpers.py
