[project]
name = "delivery-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.19.5",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "loguru>=0.7.3",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "pgeocode>=0.5.0",
    "plotly>=6.0.0",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools>=76.0.0",
    "ydata-profiling>=4.14.0",
]
